2007-08-07 Mathieu Blondel <mblondel@cvs.gnome.org>

    * data/fantasdic/ui/menus.xml: Changed menu items order.

    * lib/fantasdic/ui/main_app.rb:
    * lib/fantasdic/ui/result_text_view.rb:
    When one character is selected in the textview, it is now possible to
    "zoom over it" when it is right-clicked. This is useful to see
    more clearly characters that would be too small otherwise (e.g. Chinese
    characters).

    * lib/fantasdic/ui/main_app.rb:
    * lib/fantasdic/ui/about_dialog.rb: The close button in the about dialog
    didn't work for obscure reasons...

    * lib/fantasdic/dict.rb:
    * lib/fantasdic/ui/main_app.rb: Fixed a few problems when server is not
    available.

2007-08-06 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/main_app.rb:
    * lib/fantasdic/ui/result_text_view.rb:
    Some code moved from main_app.rb to result_text_view.rb.

    * lib/fantasdic/dict.rb: Fixed a bug when the lookup thread is killed.
    * lib/fantasdic/ui/main_app.rb: Some UI tweaks.

    * lib/fantasdic/ui/preferences_dialog.rb: 
    * data/fantasdic/glade/preferences_dialog.glade: Added "fonts" options.

    * lib/fantasdic/ui/utils.rb: Moved Pango::Layout helpers there.

    * lib/fantasdic/ui/main_app.rb:
    * data/fantasdic/ui/menus.xml: Zoom+, Zoom- and Zoom normal buttons.
    
    * lib/fantasdic/ui/result_text_view.rb: Uses font from options.
    * lib/fantasdic/ui/print.rb: Uses font from options.

    * data/fantasdic/glade/add_dictionary_dialog.glade: Fixed typo.
    
    * po/POTFILES.in: Added print.rb.

2007-08-05 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/print.rb: Uses Pango::Layout::WRAP_WORD_CHAR instead of
    Pango::Layout::WRAP_CHAR.

    * lib/fantasdic/dict.rb:
    * lib/fantasdic/ui/main_app.rb:
    Move the code to hold connections from main_app.rb to dict.rb. This is to
    clean up main_app.rb (more coming).

    * lib/fantasdic/dict.rb:
    * lib/fantasdic/ui/main_app.rb: